...
        <SymbolView
          name={{ ios: 'cloud.sun.fill', android: 'wb_sunny' }}
          size={96}
          tintColor={theme.colors.iconSun}
          type="monochrome"
        />
        <Text style={styles.title} testID="login-title">
          {t('appName')}
        </Text>
        <Text style={styles.subtitle} testID="login-subtitle">
          {t('loginSubtitle')}
        </Text>
      </View>
...
